[package]
name = "mmc"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddc-hi = "0.4.1"
retry = "1.3.1"
serde_yaml = "0.8.4"
clap = { version = "3.0", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
# opt-level = "z" # Optimize for space instead of speed